--- a/public/index.html
+++ b/public/index.html
@@ -33,8 +33,9 @@
         </div>
       </div>
       <div ng-if="mobile" class="top-bar" id="mobile-navbar">
-        <span ng-click="openMenu()" id="menu-button">☰</span>
-        <a ui-sref="home"><span>UmassEMS</span></a>
+        <div><span ng-click="openMenu()" id="menu-button">☰</span></div>
+        <div ui-sref="home" class="bar-center">UmassEMS</div>
+        <div></div>
       </div>
       <pageslide ps-speed="0.2" ps-size="50%" ps-open="checked" ps-side="left" id="mobile-menu">
         <div ng-click="closeMenu()">
@@ -47,7 +48,7 @@
           <p ui-sref="info" id="info" class="page">Info</p>
        </div>
       </pageslide>
-      <div ui-view id="view" ng-click="closeMenu()" ng-swipe-left="closeMenu()" ng-swipe-right="openMenu()"></div>
+      <div ui-view id="view" ng-click="closeMenu()" ng-swipe-left="closeMenu()" ng-swipe-right="openMenu()" ng-class="mobile?'':'view'"></div>
     </div>
   </body>
 </html>
