--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
           <p ui-sref="info" id="info" class="page">Info</p>
        </div>
       </pageslide>
-      <div ui-view id="view" ng-click="closeMenu()" ng-swipe-left="closeMenu()" ng-swipe-right="openMenu()" ng-class="mobile?'':'view'"></div>
+      <div ui-view id="view" ng-click="closeMenu()" ng-swipe-left="closeMenu()" ng-swipe-right="openMenu()" ng-class="mobile?'mobile':'pc'"></div>
     </div>
   </body>
 </html>
