Changed UmassEMS to UMass EMS

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Umass EMS</title>
+    <title>UMass EMS</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="stylesheets/bundle.min.css">
     <link  href="cropperjs/dist/cropper.min.css" rel="stylesheet">
@@ -20,7 +20,7 @@
     <div ng-controller="PanelController" id="panel-container">
       <div ng-if="!mobile" id="nav-bar" class="top-bar">
         <div>
-          <a ui-sref="home"><span>UmassEMS</span></a>
+          <a ui-sref="home"><span>UMass EMS</span></a>
         </div>
         <div id="nav-links">
           <a ui-sref="shifts" id="shifts" class="page">Shifts</a>
@@ -34,7 +34,7 @@
       </div>
       <div ng-if="mobile" class="top-bar" id="mobile-navbar">
         <div><span ng-click="openMenu()" id="menu-button">☰</span></div>
-        <div ui-sref="home" class="bar-center">UmassEMS</div>
+        <div ui-sref="home" class="bar-center">UMass EMS</div>
         <div></div>
       </div>
       <pageslide ps-speed="0.2" ps-size="50%" ps-open="checked" ps-side="left" id="mobile-menu">
