Made class page inaccessible

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,8 @@
           <a ui-sref="about" id="about" class="page">About</a>
           <a ui-sref="join" id="join" class="page">Join</a>
           <a ui-sref="class" id="class" class="page">Class</a>
-          <a ui-sref="cpr" id="cpr" class="page">CPR</a>
+          <!--uncomment when we figure out what to do with the clas-->
+          <!--<a ui-sref="cpr" id="cpr" class="page">CPR</a>-->
           <a ui-sref="info" id="info" class="page">Info</a>
         </div>
       </div>
@@ -43,7 +44,8 @@
           <p ui-sref="staff" id="staff" class="page">Staff</p>
           <p ui-sref="about" id="about" class="page">About</p>
           <p ui-sref="join" id="join" class="page">Join</p>
-          <p ui-sref="class" id="class" class="page">Class</p>
+          <!--uncomment when we figure out what to do with the clas-->
+          <!--<p ui-sref="class" id="class" class="page">Class</p>-->
           <p ui-sref="cpr" id="cpr" class="page">CPR</p>
           <p ui-sref="info" id="info" class="page">Info</p>
        </div>
