--- a/public/index.html
+++ b/public/index.html
@@ -27,9 +27,9 @@
           <a ui-sref="staff" id="staff" class="page">Staff</a>
           <a ui-sref="about" id="about" class="page">About</a>
           <a ui-sref="join" id="join" class="page">Join</a>
-          <a ui-sref="class" id="class" class="page">Class</a>
           <!--uncomment when we figure out what to do with the clas-->
-          <!--<a ui-sref="cpr" id="cpr" class="page">CPR</a>-->
+          <!--<a ui-sref="class" id="class" class="page">Class</a>-->
+          <a ui-sref="cpr" id="cpr" class="page">CPR</a>
           <a ui-sref="info" id="info" class="page">Info</a>
         </div>
       </div>
