Added calendar page with google calendar iframe

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
           <!--uncomment when we figure out what to do with the clas-->
           <!--<a ui-sref="class" id="class" class="page">Class</a>-->
           <a ui-sref="cpr" id="cpr" class="page">CPR</a>
+          <a ui-sref="calendar" id="calendar" class="page">Calendar</a>
           <a ui-sref="info" id="info" class="page">Info</a>
         </div>
       </div>
@@ -45,6 +46,7 @@
           <!--uncomment when we figure out what to do with the clas-->
           <!--<p ui-sref="class" id="class" class="page">Class</p>-->
           <p ui-sref="cpr" id="cpr" class="page">CPR</p>
+          <a ui-sref="calendar" id="calendar" class="page">Calendar</a>
           <p ui-sref="info" id="info" class="page">Info</p>
        </div>
       </pageslide>
