Fixed calendar page issues

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
           <!--uncomment when we figure out what to do with the clas-->
           <!--<p ui-sref="class" id="class" class="page">Class</p>-->
           <p ui-sref="cpr" id="cpr" class="page">CPR</p>
-          <a ui-sref="calendar" id="calendar" class="page">Calendar</a>
+          <p ui-sref="calendar" id="calendar" class="page">Calendar</p>
           <p ui-sref="info" id="info" class="page">Info</p>
        </div>
       </pageslide>
