--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <title>UMass EMS</title>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" type="text/css" href="stylesheets/bundle.min.css">
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
   </head>
   <body ng-app="UmassEMSApp">
     <script src="bower_components/marked/lib/marked.js"></script>
